--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 <body>
 	<div id="wrapper">
-		<h1>Hack Spots</h1>
+		<h1>Spartanburg Tech Startups</h1>
 		<div>
 			<ul class="nav">
 				<li><strong>The collected favorites of those who hack</strong></li>
