--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<h1>Spartanburg Tech Startups</h1>
 		<div>
 			<ul class="nav">
-				<li><strong>The collected favorites of those who hack</strong></li>
+				<li><strong>Putting all the local tech startups of Spartanburg on the map</strong></li>
 				<li><a href="#info">INFO</a> -</li>
 				<li><a href="http://jlord.github.com/sheetsee.js" target="_blank">POWERED BY SHEETSEE.JS</a> -</li>
 				<li><a href="http://www.github.com/jlord/hack-spots" target="_blank">GITHUB</a> -</li>
