--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		<h1>Spartanburg Tech Startups</h1>
 		<div>
 			<ul class="nav">
-				<li><strong>Putting all the local tech startups of Spartanburg on the map </strong></li>
+				<li><strong>Putting the local tech startups on the map! </strong></li>
 				<li><a href="#info">INFO</a> -</li>
-				<li><a href="http://jlord.github.com/sheetsee.js" target="_blank">POWERED BY SHEETSEE.JS</a> -</li>
+				<li><a href="http://whatifspartanburg.com" target="_blank">INSPIRED BY WHAT IF SPARTANBURG</a> -</li>
 				<li><a href="http://www.github.com/jlord/hack-spots" target="_blank">GITHUB</a> -</li>
-				<li><a href="http://www.twitter.com/jllord" target="_blank">@JLLORD</a></li>
+				<li><a href="http://www.twitter.com/whatifsburg" target="_blank">@whatifsburg</a></li>
 			</ul>
 		</div>
 		<div class="container">
