--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Hack Spots</title>
+		<title>Startups</title>
 		<script type="text/javascript" src="js/ICanHaz.js"></script>
 		<script type="text/javascript" src='http://api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.js'></script>
 		<script type="text/javascript" src='js/jquery.js '></script>
@@ -26,7 +26,7 @@
 				<li><strong>Putting the local tech startups on the map! </strong></li>
 				<li><a href="#info">INFO</a> -</li>
 				<li><a href="http://whatifspartanburg.com" target="_blank">INSPIRED BY WHAT IF SPARTANBURG</a> -</li>
-				<li><a href="http://www.github.com/jlord/hack-spots" target="_blank">GITHUB</a> -</li>
+				<li><a href="http://www.github.com/jeffboeh/hack-spots" target="_blank">GITHUB</a> -</li>
 				<li><a href="http://www.twitter.com/whatifsburg" target="_blank">@whatifsburg</a></li>
 			</ul>
 		</div>
