--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li><strong>Putting the local tech startups on the map! </strong></li>
 				<li><a href="#info">INFO</a> -</li>
 				<li><a href="http://whatifspartanburg.com" target="_blank">INSPIRED BY WHAT IF SPARTANBURG</a> -</li>
-				<li><a href="http://www.github.com/jeffboeh/hack-spots" target="_blank">GITHUB</a> -</li>
+				<li><a href="http://www.github.com/jeffboeh/sptg-startups" target="_blank">GITHUB</a> -</li>
 				<li><a href="http://www.twitter.com/whatifsburg" target="_blank">@whatifsburg</a></li>
 			</ul>
 		</div>
@@ -47,15 +47,13 @@
 			<h3>Contribute!</h3>
 			<div id="theNumberofSpots"></div>
 			<p>This website is hooked up to <a href="https://docs.google.com/spreadsheets/d/1DCOympwsewKKgMjiJvDP37rKrcqXgktIR-Lv1fO68-c/edit?usp=sharing" target="_blank">this Google Spreadsheet</a>, which I've shared, so click and add your favorite local tech startups to the bottom of the list! For the map you'll need to <strong>get the lat and long</strong> of the spot, you can get that <a href="http://www.latlong.net/" target="_blank">here</a>. The locating of these places is helpful, so please try to fill out all the columns.</p>
-			<p>If you would not like to add them to the map yourself - please email them to jeff@theironyard.com</p>
+			<p>If you would not like to add them to the map yourself or have trouble - please email them to jeff@theironyard.com</p>
  
 			<h3>Info</h3>
 			<p>How many startups are there in Spartanburg? How many will there be in few years? Do you know all of them and what they do? <strong>Why not!?</strong> Let's not only make the existing startups more accesible, but enable us to physically watch the growth in the next few years.</p>
  
-			<p>Besides being a list I've wanted to have, it's a fantastic (or I think so) way of using <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a>, which is a little JavaScript library I've been working on. Sheetsee.js helps you hook a Google Spreadsheet (awesome for data and collaboration!) to a website to make data more visual (maps, tables, charts).</p>
+			<p>Besides being a list I've wanted to have, it's a fantastic (or I think so) way of making the existing startups more accesible and enabling us to physically watch the growth over the next few years. Additionally, it </p>
  
-			<h3>Fork-n-Go</h3>
-			<p>This is a work-in-progress example of a fork-n-go project - which means, there is just a <a href="https://github.com/jlord/hack-spots" target="_blank">gh-pages branch in GitHub</a> for this project so when you fork it, you've got a live and hosted website instantly. BAM! Just copy the spreadsheet headers and create your own spreadsheet, swap out the spreadsheet key in index.html and commit those changes. BAM! You've got a live and hosted site with a spreadsheet you control. More on the <a href="http://www.github.com/jlord/hack-spots" target="_blank">readme</a>.</p>
 		</div>
 	</div><!-- end wrapper -->
  
