--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<p class="colorText">{{city}}, {{state}} {{#postcode}}, {{postcode}} {{/postcode}}</p>
 				<ul>
 			  	<li><span class="category">Market:</span> {{market}}</li>
-			  	<li><span class="category">Services/Products:</span> {{services}}</li>
+			  	<li><span class="category">Services:</span> {{services}}</li>
 			  	<li><span class="category">Website:</span> {{website}}</li>
 			  	<li><span class="category">Owner:</span> {{owner}}</li>
 			  	<li><span class="category">Email:</span> {{email}}</li>
@@ -105,7 +105,7 @@
 			<p class="colorText">{{city}}, {{state}} {{#postcode}}, {{postcode}} {{/postcode}}</p>
 			<ul>
 		  	<li><span class="category">Market:</span> {{market}}</li>
-		  	<li><span class="category">Services/Products:</span> {{services}}</li>
+		  	<li><span class="category">Services:</span> {{services}}</li>
 		  	<li><span class="category">Website:</span> {{website}}</li>
 		  	<li><span class="category">Owner:</span> {{owner}}</li>
 		  	<li><span class="category">Email:</span> {{email}}</li>
