--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li><strong>Putting the local tech startups on the map! </strong></li>
 				<li><a href="#info">INFO</a> -</li>
 				<li><a href="http://whatifspartanburg.com" target="_blank">INSPIRED BY WHAT IF SPARTANBURG</a> -</li>
-				<li><a href="http://www.github.com/jeffboeh/sptg-startups" target="_blank">GITHUB</a> -</li>
+				<li><a href="#info">CONTRIBUTE</a> -</li>
 				<li><a href="http://www.twitter.com/whatifsburg" target="_blank">@whatifsburg</a></li>
 			</ul>
 		</div>
@@ -52,7 +52,7 @@
 			<h3>Info</h3>
 			<p>How many startups are there in Spartanburg? How many will there be in few years? Do you know all of them and what they do? <strong>Why not!?</strong> Let's not only make the existing startups more accesible, but enable us to physically watch the growth in the next few years.</p>
  
-			<p>Besides being a list I've wanted to have, it's a fantastic (or I think so) way of making the existing startups more accesible and enabling us to physically watch the growth over the next few years. Additionally, it </p>
+			<p>Besides being a list I've wanted to have, it's a fantastic (or I think so) way of making the existing startups more accesible and enabling us to physically watch the growth over the next few years.</p>
  
 		</div>
 	</div><!-- end wrapper -->
@@ -90,7 +90,7 @@
 	</script>
  
 	<script id="theNumberofSpots" type="text/html">
-		<p><strong><span class="red-text">{{numberOfSpots}}</span> Startups so far...!</p>
+		<p><strong><span class="red-text">{{numberOfSpots}}</span> hack spots strong!</p>
 	</script>
  
 	<script id="popUps" type="text/html">
