--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	</script>
  
 	<script id="theNumberofSpots" type="text/html">
-		<p><strong><span class="red-text">{{numberOfSpots}}</span> hack spots strong!</p>
+		<p><strong><span class="red-text">{{numberOfSpots}}</span> Startups so far...</p>
 	</script>
  
 	<script id="popUps" type="text/html">
