--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<p>If you would not like to add them to the map yourself or have trouble - please email them to jeff@theironyard.com</p>
  
 			<h3>Info</h3>
-			<p>How many startups are there in Spartanburg? How many will there be in few years? Do you know all of them and what they do? <strong>Why not!?</strong> Let's not only make the existing startups more accesible, but enable us to physically watch the growth in the next few years.</p>
+			<p>How many startups are there in Spartanburg? How many will there be in few years? Do you know all of them and what they do? <strong>Why not!?</strong></p>
  
 			<p>Besides being a list I've wanted to have, it's a fantastic (or I think so) way of making the existing startups more accesible and enabling us to physically watch the growth over the next few years.</p>
  
