--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 				<li><a href="http://www.twitter.com/whatifsburg" target="_blank">@whatifsburg</a></li>
 			</ul>
 		</div>
+		
+		<div class="bg" style="background-image: url('https://spartanburg.imaginethat.io/images/streams/bg/blurred/41X0u9a3c01aa09191f40.jpg')"></div>
 		<div class="container">
 			<div id="rightSide">
 				<div id="latestSpot"></div>
