--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<h3>Contribute!</h3>
 			<div id="theNumberofSpots"></div>
 			<p>This website is hooked up to <a href="https://docs.google.com/spreadsheets/d/1DCOympwsewKKgMjiJvDP37rKrcqXgktIR-Lv1fO68-c/edit?usp=sharing" target="_blank">this Google Spreadsheet</a>, which I've shared, so click and add your favorite local tech startups to the bottom of the list! For the map you'll need to <strong>get the lat and long</strong> of the spot, you can get that <a href="http://www.latlong.net/" target="_blank">here</a>. The locating of these places is helpful, so please try to fill out all the columns.</p>
-			<p>If you would not like to add them to the map yourself or have trouble - please email them to jeff@theironyard.com</p>
+			<p>If you would not like to add them to the map yourself or have trouble - please email jeff@theironyard.com</p>
  
 			<h3>Info</h3>
 			<p>How many startups are there in Spartanburg? How many will there be in few years? Do you know all of them and what they do? <strong>Why not!?</strong></p>
