--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
 				<ul>
 			  	<li><span class="category">Market:</span> {{market}}</li>
 			  	<li><span class="category">Services:</span> {{services}}</li>
-			  
-			  	<li><span class="category">Website:</span> <a href="http://{{website}}"target="_blank"></a> {{website}}</a></li>
+			  <li><span class="category">Website:</span> {{website}}</li>
 			  	<li><span class="category">Owner:</span> {{owner}}</li>
 			  	<li><span class="category">Email:</span> {{email}}</li>
 			  	
