--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			
 			  <li><span class="category">Website:</span> <a href="http://{{website}}"target="_blank"> {{website}}</a></li>
 			  	<li><span class="category">Owner:</span> {{owner}}</li>
-			  	<li><span class="category">Email:</span> {{email}}</li>
+			  	<li><span class="category">Email:</span> <a href="mailto:{{email}}"> {{email}}</a></li>
 			  	
 			  	<li><span class="category">Contributed By:</span> <a href="http://www.twitter.com/{{contributerstwitter}}" target="_blank">@{{contributerstwitter}}</a></li>
 		  	</ul>
