--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<ul>
 		  	<li><span class="category">Market:</span> {{market}}</li>
 		  	<li><span class="category">Services:</span> {{services}}</li>
-		  	<li><span class="category">Website:</span> {{website}}</li>
+		  	<li><span class="category">Website:</span> <a href="http://{{website}}"target="_blank"> {{website}}</a></li>
 		  	<li><span class="category">Owner:</span> {{owner}}</li>
 		  	<li><span class="category">Email:</span> {{email}}</li>
 	  	</ul>
