--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 		<table>
 		<tr><th class="tHeader">Name</th><th class="tHeader">Address</th><th class="tHeader">City</th><th class="tHeader">State</th><th class="tHeader">Country</th><th class="">Elsewhere</th></tr>
 		  {{#rows}}
-		  	<tr id="{{rowNumber}}" class="spotRow"><td>{{name}}</td><td>{{address}}</td><td>{{city}}</td><td>{{state}}</td><td>{{country}}</td><td><a class="button" href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">G Map</a> <a class="button" href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Yelp</a></td></tr>
+		  	<tr id="{{rowNumber}}" class="spotRow"><td>{{name}}</td><td>{{address}}</td><td>{{city}}</td><td>{{state}}</td><td>{{country}}</td><td><a class="button" href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">G Map</a> 
+<a class="button"href="https://www.angel.co/{{name}}" target="_blank">Angel List</a></td></tr>
 		  	<tr class="hideRow"><td>wifi: {{wifipassword}}</td></tr>
 		  {{/rows}}
 	  </table>
@@ -87,7 +88,7 @@
 		  	</ul>
 		  	<ul>
 		  		<li><a href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
-		  		<li><a href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Find on Yelp</a></li>
+		  		<li><a href="https://www.angel.co/{{name}}" target="_blank">Find on Angel List</a></li>
 		  	</ul>
 		  {{/rows}}
 	</script>
@@ -111,11 +112,11 @@
 		  	<li><span class="category">Services:</span> {{services}}</li>
 		  	<li><span class="category">Website:</span> <a href="http://{{website}}"target="_blank"> {{website}}</a></li>
 		  	<li><span class="category">Owner:</span> {{owner}}</li>
-		  	<li><span class="category">Email:</span> {{email}}</li>
+		  	<li><span class="category">Email:</span> <a href="mailto:{{email}}"> {{email}}</a></li>
 	  	</ul>
 	  	<ul>
 	  		<li><a href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
-	  		<li><a href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Find on Yelp</a></li>
+	  		<li><a href="https://www.angel.co/{{name}}" target="_blank">Find on Angel List</a></li>
 	  	</ul>
 	  {{/rows}}
 	</script>
