--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</ul>
 		</div>
 		
-		<div class="bg" style="background-image: url('https://github.com/jeffboeh/sptg-startups/blob/gh-pages/img/sptbg.jpg')"></div>
+		<div class="bg" style="background-image: url('https://spartanburg.imaginethat.io/images/streams/bg/blurred/41X0u9a3c01aa09191f40.jpg')"></div>
 		<div class="container">
 			<div id="rightSide">
 				<div id="latestSpot"></div>
