--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 		  	<li><span class="category">Website:</span> <a href="http://{{website}}"target="_blank"> {{website}}</a></li>
 		  	<li><span class="category">Owner:</span> {{owner}}</li>
 		  	<li><span class="category">Email:</span> <a href="mailto:{{email}}"> {{email}}</a></li>
+<li><span class="category">Contributed By:</span> <a href="http://www.twitter.com/{{contributerstwitter}}" target="_blank">@{{contributerstwitter}}</a></li>
 	  	</ul>
 	  	<ul>
 	  		<li><a href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
