--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			  	<li><span class="category">Services:</span> {{services}}</li>
 			
 			  <li><span class="category">Website:</span> <a href="http://{{website}}"target="_blank"> {{website}}</a></li>
-			  	<li><span class="category">Owner:</span> {{owner}}</li>
+			  	<li><span class="category">Founder:</span> {{founder}}</li>
 			  	<li><span class="category">Email:</span> <a href="mailto:{{email}}"> {{email}}</a></li>
 			  	<li><span class="category">Twitter:</span> <a href="http://www.twitter.com/{{twitter}}" target="_blank">@{{twitter}}</a></li> 
 			  	<li><span class="category">Contributed By:</span> <a href="http://www.twitter.com/{{contributerstwitter}}" target="_blank">@{{contributerstwitter}}</a></li>
@@ -121,7 +121,7 @@
 		  	<li><span class="category">Market:</span> {{market}}</li>
 		  	<li><span class="category">Services:</span> {{services}}</li>
 		  	<li><span class="category">Website:</span> <a href="http://{{website}}"target="_blank"> {{website}}</a></li>
-		  	<li><span class="category">Owner:</span> {{owner}}</li>
+		  	<li><span class="category">Founder:</span> {{founder}}</li>
 		  	<li><span class="category">Email:</span> <a href="mailto:{{email}}"> {{email}}</a></li>
 		  	<li><span class="category">Twitter:</span> <a href="http://www.twitter.com/{{twitter}}" target="_blank">@{{twitter}}</a></li> 
 <li><span class="category">Contributed By:</span> <a href="http://www.twitter.com/{{contributerstwitter}}" target="_blank">@{{contributerstwitter}}</a></li>
