--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<script type="text/javascript" src='js/jquery.js '></script>
 		<script type="text/javascript" src='js/tabletop1.3.4.js'></script>
 		<script type="text/javascript" src='js/sheetsee.js'></script>
-		
-		
+		<script type="text/javascript" src='js/leaflet.markercluster.js'></script>
 		<link rel="shortcut icon" href="https://raw.github.com/jlord/hack-spots/master/favico.png"/>
  
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
