--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>SPTG Startups</title>
+		<title>864 Startups</title>
 		<script type="text/javascript" src="js/ICanHaz.js"></script>
 		<script type="text/javascript" src='http://api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.js'></script>
 		<script type="text/javascript" src='js/jquery.js '></script>
@@ -30,7 +30,7 @@
 	</head>
 <body>
 	<div id="wrapper">
-		<h1>Spartanburg Tech Startups</h1>
+		<h1>864 Tech Startups</h1>
 		<div>
 			<ul class="nav">
 				<li><strong>Putting the local tech startups on the map! </strong></li>
@@ -62,7 +62,7 @@
 			<p>If you would not like to add them to the map yourself or have trouble - please email jeff@theironyard.com</p>
  
 			<h3>Info</h3>
-			<p>How many startups are there in Spartanburg? How many will there be in few years? Do you know all of them and what they do? <strong>Why not!?</strong></p>
+			<p>How many startups are there in the Upstate? How many will there be in few years? Do you know all of them and what they do? <strong>Why not!?</strong></p>
  
 			<p>Besides being a list I've wanted to have, it's a fantastic (or I think so) way of making the existing startups more accesible and enabling us to physically watch the growth over the next few years.</p>
  
