--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 		</div>
 	</div><!-- end wrapper -->
  
-	<script id="hackSpotsTable" type="text/html">
+		<script id="hackSpotsTable" type="text/html">
 		<table>
-		<tr><th class="tHeader">Name</th><th class="tHeader">Address</th><th class="tHeader">City</th><th class="tHeader">State</th><th class="tHeader">Country</th><th class="">Elsewhere</th></tr>
+		<tr><th class="tHeader">Name</th><th class="tHeader">Market</th><th class="tHeader">Address</th><th class="tHeader">City</th><th class="tHeader">State</th><th class="">Elsewhere</th></tr>
 		  {{#rows}}
-		  	<tr id="{{rowNumber}}" class="spotRow"><td>{{name}}</td><td>{{address}}</td><td>{{city}}</td><td>{{state}}</td><td>{{country}}</td><td><a class="button" href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">G Map</a> 
+		  	<tr id="{{rowNumber}}" class="spotRow"><td>{{name}}</td><td>{{market}}</td><td>{{address}}</td><td>{{city}}</td><td>{{state}}</td><td><a class="button" href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">G Map</a> 
 <a class="button"href="https://www.angel.co/{{name}}" target="_blank">Angel List</a></td></tr>
 		  	<tr class="hideRow"><td>wifi: {{wifipassword}}</td></tr>
 		  {{/rows}}
