--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 		  // create map, tilelayer (map background), markers and popups
 			var map = Sheetsee.loadMap("map")
-			Sheetsee.addTileLayer(map, 'examples.map-20v6611k')
+			Sheetsee.addTileLayer(map, 'jllord.n7aml2bc')
 			var markerLayer = Sheetsee.addMarkerLayer(geoJSON, map, 9)
 			addPopups(map, markerLayer)
 
